# man-hours-badge

./: .gitignore  Cargo.toml  Dockerfile  README.md  app.json  compute.sh  heroku.yml  index.html  main  main.rs
db/: dotfiles.json
