[package]
name = "man-hours"
version = "0.1.0"
authors = ["Jesse Millar <jesse.millar@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
url = "1.0"
regex = "1"
chrono = "0.4"

[[bin]]
name = "man-hours"
path = "main.rs"
